@@ -252,7 +252,7 @@ AM_ICONV
 
 dnl Checks for library functions.
 
-AC_CHECK_FUNCS(gettimeofday select socket strdup getopt_long localtime_r gmtime_r backtrace srandom)
+AC_CHECK_FUNCS(gettimeofday select socket strdup getopt_long localtime_r gmtime_r backtrace srandom initgroups strtoll strtoq)
 AC_CHECK_FUNC(getopt, [], [AC_LIBOBJ([utils/attgetopt])])
 
 dnl Check if we have reentrant gethostbyname and which one
@@ -350,11 +350,11 @@ AC_TRY_COMPILE([#include <pthread.h>], [
 pthread_spinlock_t_failed lock;
 #else
 pthread_spinlock_t lock;
+#endif
 pthread_spin_init(&lock, 0);
 pthread_spin_lock(&lock);
 pthread_spin_unlock(&lock);
 pthread_spin_destroy(&lock);
-#endif
 ], [AC_MSG_RESULT(yes); AC_DEFINE(HAVE_PTHREAD_SPINLOCK_T)], AC_MSG_RESULT(no))
 
 dnl checking pthread_rwlock support
